--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Countdown for people who are waiting to see each other!",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon loveServer.js"
+    "dev": "nodemon loveServer.js",
+    "test": "nodemon loverServer2.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
     "connect-redis": "^3.2.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
     "express": "^4.14.1",
+    "express-session": "^1.15.1",
     "hogan-express": "^0.5.2",
     "jade": "^1.11.0",
     "mongodb": "^2.2.22",
